feature: adding 'create compania'
