# gen/http/decolar/kitclient/encode_decode.go
@@ -1,0 +1,53 @@
+// Code generated by goa v3.2.5, DO NOT EDIT.
+//
+// decolar go-kit HTTP client encoders and decoders
+//
+// Command:
+// $ goa gen github.com/selmison/dojo-1/design
+
+package client
+
+import (
+	"context"
+	"net/http"
+
+	kithttp "github.com/go-kit/kit/transport/http"
+	"github.com/selmison/dojo-1/gen/http/decolar/client"
+	goahttp "goa.design/goa/v3/http"
+)
+
+// EncodeCreatePaisRequest returns a go-kit EncodeRequestFunc suitable for
+// encoding decolar create_pais requests.
+func EncodeCreatePaisRequest(encoder func(*http.Request) goahttp.Encoder) kithttp.EncodeRequestFunc {
+	enc := client.EncodeCreatePaisRequest(encoder)
+	return func(_ context.Context, r *http.Request, v interface{}) error {
+		return enc(r, v)
+	}
+}
+
+// DecodeCreatePaisResponse returns a go-kit DecodeResponseFunc suitable for
+// decoding decolar create_pais responses.
+func DecodeCreatePaisResponse(decoder func(*http.Response) goahttp.Decoder) kithttp.DecodeResponseFunc {
+	dec := client.DecodeCreatePaisResponse(decoder, false)
+	return func(ctx context.Context, resp *http.Response) (interface{}, error) {
+		return dec(resp)
+	}
+}
+
+// EncodeCreateCompaniaRequest returns a go-kit EncodeRequestFunc suitable for
+// encoding decolar create_compania requests.
+func EncodeCreateCompaniaRequest(encoder func(*http.Request) goahttp.Encoder) kithttp.EncodeRequestFunc {
+	enc := client.EncodeCreateCompaniaRequest(encoder)
+	return func(_ context.Context, r *http.Request, v interface{}) error {
+		return enc(r, v)
+	}
+}
+
+// DecodeCreateCompaniaResponse returns a go-kit DecodeResponseFunc suitable
+// for decoding decolar create_compania responses.
+func DecodeCreateCompaniaResponse(decoder func(*http.Response) goahttp.Decoder) kithttp.DecodeResponseFunc {
+	dec := client.DecodeCreateCompaniaResponse(decoder, false)
+	return func(ctx context.Context, resp *http.Response) (interface{}, error) {
+		return dec(resp)
+	}
+}
