# gen/http/decolar/kitserver/mount.go
@@ -1,0 +1,38 @@
+// Code generated by goa v3.2.5, DO NOT EDIT.
+//
+// decolar go-kit HTTP server encoders and decoders
+//
+// Command:
+// $ goa gen github.com/selmison/dojo-1/design
+
+package server
+
+import (
+	"net/http"
+
+	goahttp "goa.design/goa/v3/http"
+)
+
+// MountCreatePaisHandler configures the mux to serve the "decolar" service
+// "create_pais" endpoint.
+func MountCreatePaisHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/pais", f)
+}
+
+// MountCreateCompaniaHandler configures the mux to serve the "decolar" service
+// "create_compania" endpoint.
+func MountCreateCompaniaHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/compania", f)
+}
