# gen/http/decolar/server/paths.go
@@ -1,0 +1,18 @@
+// Code generated by goa v3.2.5, DO NOT EDIT.
+//
+// HTTP request path constructors for the decolar service.
+//
+// Command:
+// $ goa gen github.com/selmison/dojo-1/design
+
+package server
+
+// CreatePaisDecolarPath returns the URL path to the decolar service create_pais HTTP endpoint.
+func CreatePaisDecolarPath() string {
+	return "/pais"
+}
+
+// CreateCompaniaDecolarPath returns the URL path to the decolar service create_compania HTTP endpoint.
+func CreateCompaniaDecolarPath() string {
+	return "/compania"
+}
