# gen/http/decolar/server/server.go
@@ -1,6 +1,6 @@
 // Code generated by goa v3.2.5, DO NOT EDIT.
 //
-// pais HTTP server
+// decolar HTTP server
 //
 // Command:
 // $ goa gen github.com/selmison/dojo-1/design
@@ -12,15 +12,16 @@ import (
 	"net/http"
 
 	"github.com/go-kit/kit/endpoint"
-	pais "github.com/selmison/dojo-1/gen/pais"
+	decolar "github.com/selmison/dojo-1/gen/decolar"
 	goahttp "goa.design/goa/v3/http"
 	goa "goa.design/goa/v3/pkg"
 )
 
-// Server lists the pais service endpoint HTTP handlers.
+// Server lists the decolar service endpoint HTTP handlers.
 type Server struct {
-	Mounts     []*MountPoint
-	CreatePais http.Handler
+	Mounts         []*MountPoint
+	CreatePais     http.Handler
+	CreateCompania http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -40,14 +41,14 @@ type MountPoint struct {
 	Pattern string
 }
 
-// New instantiates HTTP handlers for all the pais service endpoints using the
-// provided encoder and decoder. The handlers are mounted on the given mux
+// New instantiates HTTP handlers for all the decolar service endpoints using
+// the provided encoder and decoder. The handlers are mounted on the given mux
 // using the HTTP verb and path defined in the design. errhandler is called
 // whenever a response fails to be encoded. formatter is used to format errors
 // returned by the service methods prior to encoding. Both errhandler and
 // formatter are optional and can be nil.
 func New(
-	e *pais.Endpoints,
+	e *decolar.Endpoints,
 	mux goahttp.Muxer,
 	decoder func(*http.Request) goahttp.Decoder,
 	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
@@ -57,25 +58,29 @@ func New(
 	return &Server{
 		Mounts: []*MountPoint{
 			{"CreatePais", "POST", "/pais"},
+			{"CreateCompania", "POST", "/compania"},
 		},
-		CreatePais: NewCreatePaisHandler(e.CreatePais, mux, decoder, encoder, errhandler, formatter),
+		CreatePais:     NewCreatePaisHandler(e.CreatePais, mux, decoder, encoder, errhandler, formatter),
+		CreateCompania: NewCreateCompaniaHandler(e.CreateCompania, mux, decoder, encoder, errhandler, formatter),
 	}
 }
 
 // Service returns the name of the service served.
-func (s *Server) Service() string { return "pais" }
+func (s *Server) Service() string { return "decolar" }
 
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.CreatePais = m(s.CreatePais)
+	s.CreateCompania = m(s.CreateCompania)
 }
 
-// Mount configures the mux to serve the pais endpoints.
+// Mount configures the mux to serve the decolar endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountCreatePaisHandler(mux, h.CreatePais)
+	MountCreateCompaniaHandler(mux, h.CreateCompania)
 }
 
-// MountCreatePaisHandler configures the mux to serve the "pais" service
+// MountCreatePaisHandler configures the mux to serve the "decolar" service
 // "create_pais" endpoint.
 func MountCreatePaisHandler(mux goahttp.Muxer, h http.Handler) {
 	f, ok := h.(http.HandlerFunc)
@@ -88,7 +93,7 @@ func MountCreatePaisHandler(mux goahttp.Muxer, h http.Handler) {
 }
 
 // NewCreatePaisHandler creates a HTTP handler which loads the HTTP request and
-// calls the "pais" service "create_pais" endpoint.
+// calls the "decolar" service "create_pais" endpoint.
 func NewCreatePaisHandler(
 	endpoint endpoint.Endpoint,
 	mux goahttp.Muxer,
@@ -105,7 +110,58 @@ func NewCreatePaisHandler(
 	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
 		ctx = context.WithValue(ctx, goa.MethodKey, "create_pais")
-		ctx = context.WithValue(ctx, goa.ServiceKey, "pais")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "decolar")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		res, err := endpoint(ctx, payload)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				errhandler(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			errhandler(ctx, w, err)
+		}
+	})
+}
+
+// MountCreateCompaniaHandler configures the mux to serve the "decolar" service
+// "create_compania" endpoint.
+func MountCreateCompaniaHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/compania", f)
+}
+
+// NewCreateCompaniaHandler creates a HTTP handler which loads the HTTP request
+// and calls the "decolar" service "create_compania" endpoint.
+func NewCreateCompaniaHandler(
+	endpoint endpoint.Endpoint,
+	mux goahttp.Muxer,
+	decoder func(*http.Request) goahttp.Decoder,
+	encoder func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	errhandler func(context.Context, http.ResponseWriter, error),
+	formatter func(err error) goahttp.Statuser,
+) http.Handler {
+	var (
+		decodeRequest  = DecodeCreateCompaniaRequest(mux, decoder)
+		encodeResponse = EncodeCreateCompaniaResponse(encoder)
+		encodeError    = EncodeCreateCompaniaError(encoder, formatter)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "create_compania")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "decolar")
 		payload, err := decodeRequest(r)
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
