# gen/http/pais/server/paths.go
@@ -1,13 +1,0 @@
-// Code generated by goa v3.2.5, DO NOT EDIT.
-//
-// HTTP request path constructors for the pais service.
-//
-// Command:
-// $ goa gen github.com/selmison/dojo-1/design
-
-package server
-
-// CreatePaisPaisPath returns the URL path to the pais service create_pais HTTP endpoint.
-func CreatePaisPaisPath() string {
-	return "/pais"
-}
